--- a/src/app/components/image-gallery/image-gallery.component.html
+++ b/src/app/components/image-gallery/image-gallery.component.html
@@ -45,6 +45,8 @@
 @if (selectedImage(); as img) {
   <app-image-modal
     [image]="img"
+    [images]="images"
     (close)="closeModal()"
+    (navigate)="navigateToImage($event)"
   ></app-image-modal>
 }
